[gd_scene load_steps=5 format=3 uid="uid://bphlludj4cdju"]

[ext_resource type="Texture2D" uid="uid://b2m3ax075sbtb" path="res://art/images/char1.png" id="2_c4fcx"]
[ext_resource type="Script" uid="uid://cjx8wgav4f62i" path="res://environment/exp_decal.gd" id="2_j03hy"]

[sub_resource type="Curve" id="Curve_emn3d"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -1.0, 0.0, 1, 0]
point_count = 2

[sub_resource type="SphereMesh" id="SphereMesh_yygje"]
radius = 5.0
height = 10.0

[node name="Node3D" type="Node3D"]
script = ExtResource("2_j03hy")
fade_curve = SubResource("Curve_emn3d")

[node name="ExpDecal" type="Decal" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
size = Vector3(1, 1, 1)
texture_albedo = ExtResource("2_c4fcx")

[node name="LifeTimer" type="Timer" parent="ExpDecal"]
wait_time = 45.0
one_shot = true
autostart = true

[node name="FadeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("SphereMesh_yygje")

[connection signal="timeout" from="ExpDecal/LifeTimer" to="." method="_on_life_timer_timeout"]
